--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/firebase-adapter": "^2.7.1",
+    "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/next-auth": "^3.13.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase-admin": "^12.6.0",
     "lucide-react": "^0.453.0",
     "material-symbols": "^0.25.1",
     "next": "14.2.15",
