--- a/package.json
+++ b/package.json
@@ -10,21 +10,26 @@
   },
   "dependencies": {
     "@auth/firebase-adapter": "^2.7.1",
+    "@google/generative-ai": "^0.21.0",
     "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@types/formidable": "^3.4.5",
     "@types/next-auth": "^3.13.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase-admin": "^12.6.0",
+    "formidable": "^3.5.2",
     "lucide-react": "^0.453.0",
     "material-symbols": "^0.25.1",
     "next": "14.2.15",
     "next-auth": "^5.0.0-beta.22",
     "react": "^18",
     "react-dom": "^18",
+    "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
