--- a/package.json
+++ b/package.json
@@ -13,15 +13,19 @@
     "@google/generative-ai": "^0.21.0",
     "@opentelemetry/api": "^1.9.0",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@tailwindcss/typography": "^0.5.15",
     "@types/formidable": "^3.4.5",
     "@types/next-auth": "^3.13.0",
+    "@uiw/react-md-editor": "^4.0.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^3.6.0",
     "firebase-admin": "^12.6.0",
     "formidable": "^3.5.2",
     "lucide-react": "^0.453.0",
@@ -29,6 +33,7 @@
     "next": "14.2.15",
     "next-auth": "^5.0.0-beta.22",
     "react": "^18",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
     "react-spinners": "^0.14.1",
